--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,8 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.2
 Suggests: 
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    vcr (>= 0.6.0)
 Config/testthat/edition: 3
 Imports: 
     dplyr,
