--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Description: Tools to configure the systematic creation of many Metabase Queries
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.2
+RoxygenNote: 7.2.3
 Suggests: 
     testthat (>= 3.0.0),
     vcr (>= 0.6.0)
@@ -16,4 +16,5 @@ Config/testthat/edition: 3
 Imports: 
     dplyr,
     httr,
+    jsonlite,
     tibble
