removed base url from cassettes

--- a/tests/fixtures/fetch-collections.yml
+++ b/tests/fixtures/fetch-collections.yml
@@ -1,7 +1,7 @@
 http_interactions:
 - request:
     method: post
-    uri: https://metabase.citizensforeurope.org/api/session
+    uri: https://notarealinstance.metabase.com/api/session
     body:
       encoding: ''
       string: '{"username":"<sanitized>","password":"<sanitized>"}'
@@ -47,7 +47,7 @@ http_interactions:
   recorded_with: vcr/1.2.0, webmockr/0.8.2
 - request:
     method: get
-    uri: https://metabase.citizensforeurope.org/api/collection/
+    uri: https://notarealinstance.metabase.com/api/collection/
     body:
       encoding: ''
       string: ''
